--- a/CitySolution_User/app/src/main/res/layout/activity_location.xml
+++ b/CitySolution_User/app/src/main/res/layout/activity_location.xml
@@ -289,7 +289,8 @@
                             android:textSize="18dp"
                             android:textColor="@color/colorPrimary_sec" />
 
-                        <TextView
+
+                        <EditText
                             android:id="@+id/textcountry"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
