--- a/CitySolution_Authority/app/src/main/res/layout/activity_category2.xml
+++ b/CitySolution_Authority/app/src/main/res/layout/activity_category2.xml
@@ -186,47 +186,26 @@
                 android:text="Button 6" />
         </LinearLayout>
     </LinearLayout>
+    <!-- Fourth Row -->
     <LinearLayout
         android:id="@+id/row4"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="180dp"
         android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/row3"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/row3">
+        android:gravity="center">
 
-        <!-- Panel 5 -->
-
-        <!-- Panel 6 -->
-        <LinearLayout
-            android:id="@+id/panel7"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="5dp">
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:src="@drawable/authimg" />
-
-            <Button
-                android:id="@+id/btnGraphCC"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/teal_700"
-                android:text="Authority" />
-        </LinearLayout>
-
+        <!-- Panel 8 -->
         <LinearLayout
             android:id="@+id/panel8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="5dp"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/imageView8"
