--- a/CitySolution_Authority/app/src/main/res/layout/activity_city.xml
+++ b/CitySolution_Authority/app/src/main/res/layout/activity_city.xml
@@ -1,91 +1,74 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CityActivity">
-
-
+    tools:context=".CityActivity"
+    android:fillViewport="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#99EAE0"
-        android:id="@+id/rltvlayoutCity"
-        >
+        android:layout_height="wrap_content">
 
-
-        <EditText
-            android:id="@+id/edttxtsearch_bar"
-            android:layout_width="387dp"
+        <RelativeLayout
+            android:id="@+id/rltvlayoutCity"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
-            android:background="@color/white"
-            android:drawableStart="@drawable/ic_baseline_search_24"
-            android:drawablePadding="10dp"
-            android:hint="Search"
-            android:padding="10dp"
+            android:background="#99EAE0">
 
-            android:textSize="20dp" />
+            <EditText
+                android:id="@+id/edttxtsearch_bar"
+                android:layout_width="387dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/white"
+                android:drawableStart="@drawable/ic_baseline_search_24"
+                android:drawablePadding="10dp"
+                android:hint="Search"
+                android:padding="10dp"
+                android:textSize="20dp" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:id="@+id/btnFilter"
-            android:backgroundTint="@color/teal_700"
-            android:layout_marginBottom="5dp"
-            android:layout_below="@+id/edttxtsearch_bar"
-            android:scaleType="fitXY"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:text="Sort by"
-            />
+            <Button
+                android:id="@+id/btnFilter"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_below="@+id/edttxtsearch_bar"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="@color/teal_700"
+                android:text="Sort by" />
 
-
-        <TextView
-            android:id="@+id/txtviewfilter"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_below="@+id/edttxtsearch_bar"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="9dp"
-            android:layout_marginEnd="21dp"
-            android:layout_marginBottom="5dp"
-
-            android:padding="5dp"
-            android:text="No Filtering"
-            android:textColor="@color/teal_700"
-            android:textSize="15dp"
-            android:textStyle="bold|italic"/>
-
-
-    </RelativeLayout>
-
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rltvlayoutCity">
+            <TextView
+                android:id="@+id/txtviewfilter"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_below="@+id/edttxtsearch_bar"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginEnd="21dp"
+                android:layout_marginBottom="5dp"
+                android:padding="5dp"
+                android:text="No Filtering"
+                android:textColor="@color/teal_700"
+                android:textSize="15dp"
+                android:textStyle="bold|italic" />
+        </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RecyclerViewrv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/txtviewfilter"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rltvlayoutCity"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/row_city" />
-
-
-
-    </ScrollView>
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
