--- a/CitySolution_Authority/app/src/main/res/layout/activity_login.xml
+++ b/CitySolution_Authority/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         tools:context=".LoginActivity">
 
         <EditText
@@ -36,10 +38,10 @@
 
         <EditText
             android:id="@+id/edttxtPassword"
-            android:layout_width="375dp"
-            android:layout_height="50dp"
+            android:layout_width="333dp"
+            android:layout_height="51dp"
             android:background="@color/grey_3"
-            android:drawableRight="@drawable/ic_baseline_key_24"
+
             android:hint="Password"
             android:inputType="textPassword"
             android:minHeight="48dp"
@@ -49,9 +51,22 @@
             android:textColorHint="#5F5C60"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.205"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.518" />
+            app:layout_constraintVertical_bias="0.522" />
+
+        <ImageView
+            android:id="@+id/imageViewPasswordVisibility1"
+            android:layout_width="38dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_baseline_eye_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.938"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.521" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -124,6 +139,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.265"
             app:srcCompat="@drawable/logo" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.931" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
