--- a/CitySolution_Authority/app/src/main/res/layout/activity_problem_details.xml
+++ b/CitySolution_Authority/app/src/main/res/layout/activity_problem_details.xml
@@ -405,6 +405,7 @@
                 android:text="Additional description, feedback \nand suggestions(optional)"
                 android:layout_gravity="center"
                 android:layout_marginBottom="30dp"
+                android:layout_marginStart="10dp"
                 />
 
 
