--- a/CitySolution_Authority/app/src/main/res/layout/activity_problem_details2.xml
+++ b/CitySolution_Authority/app/src/main/res/layout/activity_problem_details2.xml
@@ -395,6 +395,7 @@
                 android:text="Additional description, feedback \nand suggestions(optional)"
                 android:layout_gravity="center"
                 android:layout_marginBottom="30dp"
+                android:layout_marginLeft="10dp"
                 />
 
 
